adding external model library

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+jwt.expiry = 3600
+cookie.expiry = 3600
+jwt.secret = aVeryLongSecretKeyThatIsAtLeast32CharactersLong123!
