--- a/build.gradle
+++ b/build.gradle
@@ -19,15 +19,16 @@ configurations {
     }
 }
 
+
+
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-mysql'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -35,6 +36,13 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.4.2'
+    implementation 'io.jsonwebtoken:jjwt:0.12.5'
+    implementation'com.pickme:PickMeApp-EntityService:0.0.2-SNAPSHOT'
+
+
+
+
 }
 
 tasks.named('test') {
