--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,10 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.4.2'
     implementation 'io.jsonwebtoken:jjwt:0.12.5'
-    implementation'com.pickme:PickMeApp-EntityService:0.0.2-SNAPSHOT'
+    implementation'com.pickme:PickMeApp-EntityService:0.0.5-SNAPSHOT'
+    implementation 'org.springframework.data:spring-data-redis:3.4.0'
+    implementation 'redis.clients:jedis:5.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-cache:3.4.3'
 
 
 
