adding docker file and making image

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'org.springframework.data:spring-data-redis:3.4.0'
     implementation 'redis.clients:jedis:5.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-cache:3.4.3'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
 
 
 
