--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PickMeApp-AuthService
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/pickme_app
+spring.datasource.url=${DB_URL}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +10,8 @@ spring.jpa.show-sql: true
 jwt.expiry = 3600
 cookie.expiry = 3600
 jwt.secret = aVeryLongSecretKeyThatIsAtLeast32CharactersLong123!
+
+server.port=9192
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT}
+eureka.instance.preferIpAddress=true
+
