--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ cookie.expiry = 3600
 jwt.secret = aVeryLongSecretKeyThatIsAtLeast32CharactersLong123!
 
 server.port=9192
+server.address=0.0.0.0
 eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT}
 eureka.instance.preferIpAddress=true
+
+spring.cache.redis.time-to-live=60000
 
